// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connector can join new channel 1`] = `
{
  "foo": Channel {
    "eventFormatter": u {
      "namespace": "App.Events",
    },
    "name": "foo",
    "options": {
      "auth": {
        "headers": {},
      },
      "authEndpoint": "/broadcasting/auth",
      "bearerToken": null,
      "broadcaster": undefined,
      "csrfToken": null,
      "host": null,
      "key": null,
      "namespace": "App.Events",
      "polling": 5000,
      "routes": {
        "connect": "",
        "publish": "",
        "receive": "",
        "subscribe": "",
        "unsubscribe": "",
      },
      "userAuthentication": {
        "endpoint": "/broadcasting/user-auth",
        "headers": {},
      },
    },
    "socket": {
      "connect": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "disconnect": [MockFunction],
      "subscribe": [MockFunction] {
        "calls": [
          [
            "foo",
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "unsubscribe": [MockFunction],
    },
  },
}
`;

exports[`connector can join presence channel 1`] = `
{
  "presence-foo": PresenceChannel {
    "eventFormatter": u {
      "namespace": "App.Events",
    },
    "name": "presence-foo",
    "options": {
      "auth": {
        "headers": {},
      },
      "authEndpoint": "/broadcasting/auth",
      "bearerToken": null,
      "broadcaster": undefined,
      "csrfToken": null,
      "host": null,
      "key": null,
      "namespace": "App.Events",
      "polling": 5000,
      "routes": {
        "connect": "",
        "publish": "",
        "receive": "",
        "subscribe": "",
        "unsubscribe": "",
      },
      "userAuthentication": {
        "endpoint": "/broadcasting/user-auth",
        "headers": {},
      },
    },
    "socket": {
      "connect": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "disconnect": [MockFunction],
      "subscribe": [MockFunction] {
        "calls": [
          [
            "presence-foo",
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "unsubscribe": [MockFunction],
    },
  },
}
`;

exports[`connector can join private channel 1`] = `
{
  "private-foo": PrivateChannel {
    "eventFormatter": u {
      "namespace": "App.Events",
    },
    "name": "private-foo",
    "options": {
      "auth": {
        "headers": {},
      },
      "authEndpoint": "/broadcasting/auth",
      "bearerToken": null,
      "broadcaster": undefined,
      "csrfToken": null,
      "host": null,
      "key": null,
      "namespace": "App.Events",
      "polling": 5000,
      "routes": {
        "connect": "",
        "publish": "",
        "receive": "",
        "subscribe": "",
        "unsubscribe": "",
      },
      "userAuthentication": {
        "endpoint": "/broadcasting/user-auth",
        "headers": {},
      },
    },
    "socket": {
      "connect": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "disconnect": [MockFunction],
      "subscribe": [MockFunction] {
        "calls": [
          [
            "private-foo",
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "unsubscribe": [MockFunction],
    },
  },
}
`;
